--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -40,6 +40,9 @@ import {
                   <div id="sib-form-container" class="sib-form-container">
                     <div id="error-message" class="sib-form-message-panel">
                       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
+                        <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
+                          <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
+                        </svg>
                         <span class="sib-form-message-panel__inner-text">
                           We could not confirm your subscription.
                         </span>
@@ -48,6 +51,9 @@ import {
                     <div></div>
                     <div id="success-message" class="sib-form-message-panel">
                       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
+                        <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">
+                          <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
+                        </svg>
                         <span class="sib-form-message-panel__inner-text">
                           Your subscription is confirmed.
                         </span>
@@ -56,20 +62,39 @@ import {
                     <div></div>
                     <div id="sib-container" class="sib-container--large sib-container--vertical">
                       <form id="sib-form" method="POST" action="https://ce61d189.sibforms.com/serve/MUIFAG64q-W7YU2YDjfbFFOXjbs1hqvqlze8oIGMDLOdpjPKleNprY4AQIu72OCYj4nFq1suFGw9VusLNlnwcNNCIsbIBEpw2zYSK9lPvDP1nr287Vq-pqgOG4hvt3VfeoFeenqHUsT5oqmgPB-U3vJq6xsxDih-j8Ec-po_oAOaVH7nmaWPnxr0NEeRKmW1uMI3zN1nBwxbPCf97g==" data-type="subscription">
-                        <div class="flex flex-col md:flex-row gap-2">
-                          <div class="flex-1 sib-input sib-form-block">
+                        <div style="padding: 8px 0;">
+                          <div class="sib-form-block">
+                            <div class="sib-text-form-block">
+                              <p class="hidden">Newsletter</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div style="padding: 8px 0;">
+                          <div class="sib-form-block">
+                            <div class="sib-text-form-block">
+                              <p class="hidden">Subscribe to our newsletter to follow our news.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div style="padding: 8px 0;">
+                          <div class="sib-input sib-form-block">
                             <div class="form__entry entry_block">
                               <div class="form__label-row">
                                 <div class="entry__field">
-                                  <input class="input input-bordered w-full" type="email" id="EMAIL" name="EMAIL" autocomplete="email" data-required="true" required />
+                                  <input class="input input-bordered w-full" type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="EMAIL" data-required="true" required />
                                 </div>
                               </div>
                               <label class="entry__error entry__error--primary"></label>
                             </div>
                           </div>
+                        </div>
+                        <div style="padding: 8px 0;">
                           <div class="sib-form-block">
-                            <button class="btn btn-primary w-full md:w-auto whitespace-nowrap font-bold" form="sib-form" type="submit">
-                              Subscribe
+                            <button class="sib-form-block__button sib-form-block__button-with-loader btn btn-primary w-full md:w-auto whitespace-nowrap font-bold" form="sib-form" type="submit">
+                              <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512" style="">
+                                <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
+                              </svg>
+                              SUBSCRIBE
                             </button>
                           </div>
                         </div>
@@ -137,6 +162,32 @@ import {
     margin-top: 0;
   }
   
+  #sib-container form > div[style*="padding: 8px 0"]:first-child,
+  #sib-container form > div[style*="padding: 8px 0"]:nth-child(2) {
+    display: none;
+  }
+  
+  #sib-container form > div[style*="padding: 8px 0"]:nth-child(3) {
+    flex: 1;
+    padding: 0 !important;
+  }
+  
+  #sib-container form > div[style*="padding: 8px 0"]:last-child {
+    padding: 0 !important;
+  }
+  
+  #sib-container form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  
+  @media (min-width: 768px) {
+    #sib-container form {
+      flex-direction: row;
+    }
+  }
+  
   #sib-container .entry__field input {
     background-color: hsl(var(--b1));
     border-color: hsl(var(--b3));
@@ -163,6 +214,14 @@ import {
     padding: 1rem;
   }
   
+  #error-message .sib-icon {
+    width: 1.25rem;
+    height: 1.25rem;
+    fill: currentColor;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+  }
+  
   #success-message.sib-form-message-panel {
     font-size: 0.875rem;
     text-align: center;
@@ -175,10 +234,43 @@ import {
     padding: 1rem;
   }
   
+  #success-message .sib-icon {
+    width: 1.25rem;
+    height: 1.25rem;
+    fill: currentColor;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+  }
+  
   .entry__error {
     color: hsl(var(--er));
     font-size: 0.875rem;
     margin-top: 0.25rem;
+  }
+  
+  .sib-form-block__button-with-loader {
+    position: relative;
+  }
+  
+  .sib-hide-loader-icon {
+    display: none;
+  }
+  
+  .sib-form-block__button-with-loader.loading .sib-hide-loader-icon {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
 </style>
 
